==> ThatsFokus/nf-interpreter-1/targets/ESP32/_nanoCLR/System.Device.Spi/cpu_spi.cpp <==
#include <targetHAL.h>
#include <nanoCLR_Interop.h>
#include <nanoCLR_Runtime.h>
#include <nanoCLR_Checks.h>
#include <nanoHAL.h>
#include <Esp32_DeviceMapping.h>
#include <sys_dev_spi_native_target.h>
#define MAX_CLOCK_FREQUENCY_GPIO_FULL 26000000
#define MAX_CLOCK_FREQUENCY_GPIO_HALF 40000000
#define MAX_CLOCK_FREQUENCY_NATIVE 80000000

bool CPU_SPI_Initialize(uint8_t busIndex, const SPI_DEVICE_CONFIGURATION &spiDeviceConfig)
{
    // Do we already initialized the SPI bus?
    if (nf_pal_spi[busIndex].NumberSpiDeviceInUse > 0)
    {
        return true;
    }

    GPIO_PIN clockPin, misoPin, mosiPin;

    // Get pins used by SPI bus
    CPU_SPI_GetPins(busIndex, clockPin, misoPin, mosiPin);

    if (spiDeviceConfig.BusConfiguration == SpiBusConfiguration_FullDuplex)
    {
        // Check that ALL pins have been configured
        if (clockPin == GPIO_PIN_NONE || misoPin == GPIO_PIN_NONE || mosiPin == GPIO_PIN_NONE)
        {
            ESP_LOGE(TAG, "Spi pins for SPI%d not configured", busIndex);
            return false;
        }
    }
    else
    {
        // Half duplex only requires CLK and MOSI
        if (clockPin == GPIO_PIN_NONE || mosiPin == GPIO_PIN_NONE)
        {
            ESP_LOGE(TAG, "Spi pins for SPI%d not configured", busIndex);
            return false;
        }
    }

    spi_bus_config_t bus_config{

        // mosi pin
        mosi_io_num : (int)mosiPin,
        // miso pin
        miso_io_num : (int)misoPin,
        // Clock
        sclk_io_num : (int)clockPin,
        // Quad Write protect (-1 not used)
        quadwp_io_num : -1,
        // Quad Hold
        quadhd_io_num : -1,
        // GPIO pin for spi data4 signal in octal mode, -1 if not used.
        data4_io_num : -1,
        // GPIO pin for spi data5 signal in octal mode, // -1 if not used.
        data5_io_num : -1,
        // GPIO pin for spi data6 signal in octal mode, // -1 if not used.
        data6_io_num : -1,
        // GPIO pin for spi data7 signal in octal mode, //-1 if not used.
        data7_io_num : -1,
        // max transfer size
        max_transfer_sz : 16384,
        // SPICOMMON_BUSFLAG_* flags
        flags : 0,
        intr_flags : ESP_INTR_FLAG_IRAM
    };

    // First available bus on ESP32 is HSPI_HOST(1)
    // Try with DMA first
#if defined(CONFIG_IDF_TARGET_ESP32C3)
    esp_err_t ret = spi_bus_initialize((spi_host_device_t)(busIndex), &bus_config, SPI_DMA_CH_AUTO);
#else
    esp_err_t ret = spi_bus_initialize((spi_host_device_t)(busIndex + HSPI_HOST), &bus_config, SPI_DMA_CH_AUTO);
#endif

    if (ret != ESP_OK)
    {
#if defined(CONFIG_IDF_TARGET_ESP32C3)
        ESP_LOGE(TAG, "Unable to init SPI bus %d esp_err %d", busIndex, ret);
#else
        ESP_LOGE(TAG, "Unable to init SPI bus %d esp_err %d", busIndex + HSPI_HOST, ret);
#endif
        return false;
    }

    nf_pal_spi[busIndex].BusIndex = busIndex;
    nf_pal_spi[busIndex].status = SPI_OP_STATUS::SPI_OP_READY;

    haveAsyncTrans[busIndex] = false;

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t busIndex)
{
#if defined(CONFIG_IDF_TARGET_ESP32C3)
    esp_err_t ret = spi_bus_free((spi_host_device_t)(busIndex));
#else
    esp_err_t ret = spi_bus_free((spi_host_device_t)(busIndex + HSPI_HOST));
#endif

    if (ret != ESP_OK)
    {
#if defined(CONFIG_IDF_TARGET_ESP32C3)
        ESP_LOGE(TAG, "spi_bus_free bus %d esp_err %d", busIndex, ret);
#else
        ESP_LOGE(TAG, "spi_bus_free bus %d esp_err %d", busIndex + HSPI_HOST, ret);
#endif

        return false;
    }
    return true;
}

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeData,
    int32_t writeSize,
    uint8_t *readData,
    int32_t readSize)
{
    NANOCLR_HEADER();
    {
        uint8_t *writeDataBuffer = NULL;
        uint8_t *readDataBuffer = NULL;
        bool async = (wrc.callback != 0);
        esp_err_t ret;

        // get data bit length
        int databitLength = wrc.Bits16ReadWrite ? 16 : 8;

        // // Are we using SPI full-duplex for transfer ?
        // // The SPI doesn't support half duplex operation with DMA and without DMA the receive length is limited to 4
        // bytes
        // // So we run in full duplex mode all the time and simulate half duplex mode by creating a larger receive
        // buffer for
        // // the whole of the transaction and then copying the rx part to original buffer
        // // For full duplex we just use passed buffers.
        int MaxElementlength;
        if (wrc.fullDuplex)
        {
            // for full duplex just use largest element
            // TODO : There may be a problem with read data overwriting passed read buff if write size > read size
            // !!!!!!
            //        May for this case we should always allocate a separate buffer for transfer
            MaxElementlength = (readSize > writeSize) ? readSize : writeSize;

            readDataBuffer = readData;
        }
        else
        {
            // for Half-duplex its the length of both items
            MaxElementlength = writeSize + readSize;
            if (readSize)
            {
                MaxElementlength += wrc.readOffset;
            }

            int maxByteDatalength = (wrc.Bits16ReadWrite) ? MaxElementlength * 2 : MaxElementlength;

            if (readSize) // Any read data then use alternative buffer with write & read data
            {
                // Allocate a new write and read buffers to spoof half duplex operation using full duplex so we can use
                // DMA. length included write data, any dummy bytes(readOffset) and read data size
                writeDataBuffer = (unsigned char *)heap_caps_malloc(maxByteDatalength, MALLOC_CAP_DMA);
                if (writeDataBuffer == 0)
                {
                    NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
                }

                readDataBuffer = (unsigned char *)heap_caps_malloc(maxByteDatalength, MALLOC_CAP_DMA);
                if (readDataBuffer == 0)
                {
                    NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
                }

                memset(writeDataBuffer, 0, maxByteDatalength);
                memcpy(writeDataBuffer, writeData, writeSize);
                writeData = writeDataBuffer;
            }
        }

        NF_PAL_SPI *pnf_pal_spi = &nf_pal_spi[sdev.Spi_Bus];

        pnf_pal_spi->writeSize = writeSize;
        pnf_pal_spi->readSize = readSize;
        pnf_pal_spi->originalReadData = readData;
        pnf_pal_spi->readDataBuffer = readDataBuffer;
        pnf_pal_spi->writeDataBuffer = writeDataBuffer;
        pnf_pal_spi->fullDuplex = wrc.fullDuplex;
        pnf_pal_spi->readOffset = wrc.readOffset; // dummy bytes between write & read on half duplex
        pnf_pal_spi->callback = wrc.callback;
        pnf_pal_spi->CurrentChipSelect = wrc.DeviceChipSelect;

        // Wait for any previously queued async transfer
        CPU_SPI_Wait_Busy(deviceHandle, sdev);

        // Set up SPI Transaction
        spi_transaction_t *pTrans = &pnf_pal_spi->trans;

        // use full duplex unless no read data or bus configuration is half duplex
        pTrans->flags =
            (readSize == 0) || (sdev.BusConfiguration == SpiBusConfiguration_HalfDuplex) ? SPI_DEVICE_HALFDUPLEX : 0;
        pTrans->cmd = 0;
        pTrans->addr = 0;
        // length - Full duplex is total length, half duplex the TX length
        pTrans->length = databitLength * MaxElementlength;
        // rxlength - Full duplex is same as length or 0, half duplex is read length
        pTrans->rxlength = 0;
        pTrans->user = (void *)pnf_pal_spi;
        pTrans->tx_buffer = writeData;
        pTrans->rx_buffer = readDataBuffer;

        // if CS is to be controlled by the driver, set the GPIO
        if (wrc.DeviceChipSelect >= 0)
        {
            // assert pin based on CS active level
            CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)wrc.ChipSelectActiveState);
        }

        // Start asynchronous SPI transaction
        if (async)
        {
            pnf_pal_spi->callback = wrc.callback;

            ret = spi_device_queue_trans((spi_device_handle_t)deviceHandle, pTrans, portMAX_DELAY);
            if (ret != ESP_OK)
            {
                // Error so free up buffer if Half duplex
                if (!wrc.fullDuplex && readSize != 0)
                {
                    // Clean up
                    heap_caps_free(writeDataBuffer);
                    heap_caps_free(readDataBuffer);
                }

                switch (ret)
                {
                    case ESP_ERR_NO_MEM:
                        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);

                    case ESP_ERR_INVALID_ARG:
                        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);

                    case ESP_ERR_INVALID_STATE:
                    default:
                        NANOCLR_SET_AND_LEAVE(CLR_E_FAIL);
                }
            }
            else
            {
                haveAsyncTrans[sdev.Spi_Bus] = true;
            }

            pnf_pal_spi->status = SPI_OP_STATUS::SPI_OP_RUNNING;

            // Return Busy to indicate ASync call started and callback will be called on completion
            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
        else
        {
            // Synchronous SPI operation
            // Use Polling method to start and wait to complete(quickest)
            ret = spi_device_polling_transmit((spi_device_handle_t)deviceHandle, pTrans);

            pnf_pal_spi->status = SPI_OP_STATUS::SPI_OP_COMPLETE;

            if (ret != ESP_OK)
            {
                if (!wrc.fullDuplex && readSize != 0)
                {
                    heap_caps_free(writeDataBuffer);
                    heap_caps_free(readDataBuffer);
                }
                NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            }

            // Finish up half duplex, done in callback
            // frees buffer and copies read data
        }
    }

    NANOCLR_NOCLEANUP();
}

SPI_OP_STATUS CPU_SPI_OP_Status(uint8_t busIndex, uint32_t deviceHandle)
{
    (void)deviceHandle;

    NF_PAL_SPI *pnf_pal_spi = &nf_pal_spi[busIndex];

    return pnf_pal_spi->status;
}
